# kapptemplate

./: CMakeLists.txt  README
doc/: CMakeLists.txt
src/: CMakeLists.txt  Messages.sh  main.cpp  photomanager.cpp  photomanager.desktop  photomanager.h  photomanager.kcfg  photomanagerui.rc  settings.kcfgc
